--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
+        "start": "node index.js",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "",
@@ -12,6 +13,6 @@
         "pug": "^2.0.0-rc.4"
     },
     "engines": {
-        "node": "8.9.4"
+        "node": "10.14.2"
     }
 }
