--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "pug": "^2.0.0-rc.4"
+        "pug": "2.0.0-rc.4"
     },
     "engines": {
-        "node": "8.9.4"
+        "node": "10.14.2"
     }
 }
