herokuで動くように変更

--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "jade": "^1.11.0"
+    "jade": "^1.11.0",
+    "pug": "2.0.0-rc.4"
   },
   "engines": {
-    "node": "8.9.4"
+    "node": "~10"
   }
 }
