--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "pug": "^2.0.0-rc.4"
+        "pug": "2.0.4"
     },
     "engines": {
         "node": "~10"
